--- a/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
+++ b/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessLayer\database.cs" />
+    <Compile Include="DataAccessLayer\Repositories\Login.cs" />
     <Compile Include="PresentationLayer\Form\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,7 +83,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="BusinessLogicLayer\Services\" />
-    <Folder Include="DataAccessLayer\Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
