drow data on gridview -FormKho

--- a/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
+++ b/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
@@ -50,6 +50,7 @@
     <Compile Include="BusinessLogicLayer\Services\LoginLogic.cs" />
     <Compile Include="DataAccessLayer\database.cs" />
     <Compile Include="DataAccessLayer\IDatabaseConnection.cs" />
+    <Compile Include="DataAccessLayer\Repositories\KhoDb.cs" />
     <Compile Include="DataAccessLayer\Repositories\Login.cs" />
     <Compile Include="PresentationLayer\Forms\FormAdmin.cs">
       <SubType>Form</SubType>
