--- a/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
+++ b/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
@@ -77,6 +77,12 @@
     <Compile Include="PresentationLayer\Forms\FormNhanVien.Designer.cs">
       <DependentUpon>FormNhanVien.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\Forms\FormSanPham.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\Forms\FormSanPham.Designer.cs">
+      <DependentUpon>FormSanPham.cs</DependentUpon>
+    </Compile>
     <Compile Include="PresentationLayer\Forms\FormThuNgan.cs">
       <SubType>Form</SubType>
     </Compile>
