code nha cung cap hi hi

--- a/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
+++ b/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BusinessLogicLayer\Services\KhachHangLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\KhoLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\LoginLogic.cs" />
+    <Compile Include="BusinessLogicLayer\Services\NhaCungCapLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\NhanVienLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\SanPhamLG.cs" />
     <Compile Include="DataAccessLayer\database.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="DataAccessLayer\Repositories\KhachHangDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\KhoDb.cs" />
     <Compile Include="DataAccessLayer\Repositories\Login.cs" />
+    <Compile Include="DataAccessLayer\Repositories\NhaCungCapDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\NhanVienDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\SanPhamDB.cs" />
     <Compile Include="PresentationLayer\Forms\FormAdmin.cs">
