create all function in form ThuNgan

--- a/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
+++ b/QlBanHang/MiniMart/MiniMart/MiniMart.csproj
@@ -48,20 +48,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogicLayer\Services\AdminLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\KhachHangLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\KhoLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\LoginLogic.cs" />
     <Compile Include="BusinessLogicLayer\Services\NhaCungCapLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\NhanVienLG.cs" />
     <Compile Include="BusinessLogicLayer\Services\SanPhamLG.cs" />
+    <Compile Include="BusinessLogicLayer\Services\ThuNganLG.cs" />
     <Compile Include="DataAccessLayer\database.cs" />
     <Compile Include="DataAccessLayer\IDatabaseConnection.cs" />
+    <Compile Include="DataAccessLayer\Repositories\AdminDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\KhachHangDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\KhoDb.cs" />
     <Compile Include="DataAccessLayer\Repositories\Login.cs" />
     <Compile Include="DataAccessLayer\Repositories\NhaCungCapDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\NhanVienDB.cs" />
     <Compile Include="DataAccessLayer\Repositories\SanPhamDB.cs" />
+    <Compile Include="DataAccessLayer\Repositories\ThuNganDB.cs" />
     <Compile Include="PresentationLayer\Forms\FormAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
